--- a/projects/client-ui/src/app/modules/sign-in/sign-in.component.scss
+++ b/projects/client-ui/src/app/modules/sign-in/sign-in.component.scss
@@ -40,14 +40,20 @@
         //padding-left: 33.7px;
       }
       .form-container {
-        width: 70%;
-        height: auto;
         margin: auto;
       }
       .rights-reserved-text {
         margin-bottom: -27px;
       }
     }
+  }
+}
+
+@media (max-width: 500px) {
+  .sign-in-container .sign-in .form-container {
+    width: 95%;
+    margin: auto;
+    height: auto;
   }
 }
 
